# minic

./: .gitignore  Makefile  minic.py  pyproject.toml
minic/: ast.py  ir.py  ir_gen.py  parser.py  scanner.py  x86_64.py  x86_64_code_gen.py
tests/: test_ir.py  test_ir_gen.py  test_parser.py  test_scanner.py  test_x86_64_code_gen.py
