[tool.poetry]
name = "minic"
version = "0.1.0"
description = ""
authors = ["Mário Feroldi <mferoldif@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^23.1.0"
hypothesis = "^6.68.2"
isort = "^5.12.0"

[tool.poetry.group.dev.dependencies]
pytest-icdiff = "^0.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
